nicer looking dropdown icon, nice loading animations, moved search to home, remove whitespace from AL queries, optimise SW fetch, better immerse, improve fps resolving, sub showing fixes, general performance improvements

--- a/app/css/misc.css
+++ b/app/css/misc.css
@@ -7,9 +7,12 @@
     --base-html-font-size-1920: 70%;
     --tooltip-width: 17rem;
     --card-border-width: 0;
+    --navbar-border-width: 0;
+    --input-border-width: 0;
 }
 
 body {
+    scroll-behavior: smooth;
     overscroll-behavior: none;
     user-select: none;
 }
@@ -41,6 +44,15 @@ input:invalid {
     margin-left: .4rem;
     margin-right: -.5rem;
     filter: invert(.84);
+    padding-top: 2rem;
+}
+
+.bg-dark::-webkit-inner-spin-button {
+    filter: invert(.942);
+}
+
+#home.browsing .home, #home:not(.browsing) .browse {
+    display: none;
 }
 
 .desc p {
@@ -92,13 +104,13 @@ input:invalid {
     grid-column: 1 / -1;
 }
 
-#home .gallery {
+#home:not(.browsing) .gallery {
     padding: .7rem 4rem;
     grid-template-columns: repeat(5, 50rem);
     justify-content: unset;
 }
 
-#home .gallery:after {
+#home:not(.browsing) .gallery:after {
     content: "";
     position: absolute;
     right: 0;
@@ -128,17 +140,17 @@ input:invalid {
     padding: 2rem 4rem
 }
 
-#browse.loading .gallery {
+#home.loading .gallery {
     overflow-y: initial !important;
 }
 
-#browse.loading {
+#home.loading {
     height: 50rem !important;
     position: relative;
     overflow-y: hidden !important;
 }
 
-#browse.loading:after {
+#home.loading:after {
     content: "";
     position: absolute;
     bottom: 0;
@@ -169,7 +181,11 @@ section {
 
 section:target {
     display: flex !important;
-    height: 100%
+    height: 100%;
+}
+
+section:target:not(#player) {
+    animation: .3s ease 0s 1 load-in;
 }
 
 .h-10 {
